--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -25,7 +25,12 @@
     margin: 0px 25px 25px 25px;
 }
 
-.firstArticle {
+.articleTitle {
+    text-decoration: none;
+}
+
+.articleTime {
+
 }
 
 .articleImg {
