--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -20,8 +20,9 @@
   margin-top: 30px;
 }
 
-.news>.newsArticle>.newsTitle {
+.newsTitle {
   text-align: center;
+  text-decoration: none;
   font-weight: 600;
   color: #14285f;
 }
