Remove unused links from footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,27 +1,7 @@
 footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     padding: 20px;  
-}
-
-.footerLi {
-    list-style-type: none;
-}
-
-.footerList > li > a {
-    text-decoration: none;
-    
-}
-
-.footerList > li {
-    list-style-type: none; 
-}
-
-.section {
-    text-decoration: none;
-}
-
-.sec-2 {
-    color: grey;
 }
