--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0px 40px;
 }
 
 .news>.newsArticle {
@@ -32,26 +33,34 @@
   flex-direction: column;
 }
 
-.newsContainer>.newsTime {
+.newsTime {
   color: #14285f;
   text-align: end;
   padding: 20px;
 }
 
-.news>.newsArticle>.newsAuthor {
-  text-align: right;
-  padding: 20px 0px;
-  font-style: italic;
-  color: #14285f;
-}
-
-.news>.newsArticle>.newsDescription {
-  padding: 20px 0px;
-}
-
-.news>.newsArticle>.newsImage {
+.newsImage {
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 10px;
+}
+
+@media only screen and (max-width:1260px) {
+  .newsContainer {
+    padding: 0px 20px;
+  }
+
+  .newsArticle {
+    flex-direction: column;
+  }
+
+  .newsTime {
+    padding: 0px 20px;
+    margin-top: 0px;
+  }
+
+  .newsImage {
+    width: 80%;
+  }
 }
